# big-data-examples

./: .gitignore  README.md  pyproject.toml
dask/: avg_temperature.py  word_count.py
data/: city_temperature.csv
map_reduce/: avg_temperature.py  word_count.py
mrjob/: avg_temperature.py
pyspark/: avg_temperature.py  word_count.py
